...
            }
            item(key = "add") {
                Spacer(Modifier.height(16.dp))
                WideButton(
                    stringResource(R.string.action_add),
                    enabled = state.tickedCount > 0 && !state.adding && state.added == null,
                    tag = "receiveFileAdd",
                    onClick = onAdd
                )
            }
        }
    }
}
...
